# AI-NATIVE-DBMS-C

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
.github/workflows/: ci.yml
benchmark/: README.md
docs/: 00_project_overview.md  01_build_and_run.md  02_architecture.md  03_coding_style.md  03_handmade_ai_runtime.md  04_ai_match_operator.md  04_naming_convention.md  05_directory_layout.md  05_testing.md  06_memory_and_ownership.md  07_error_handling.md  08_testing.md  09_git_and_release.md  10_ai_assisted_development.md  11_handmade_ai_runtime.md  12_ai_match_operator.md  13_core_foundation_design.md  14_versioning.md  15_memory_arena_design.md  16_binary_encoding_design.md  17_core_containers_design.md  README.md
docs/migration/: README.md  legacy_inventory.md  legacy_to_aidb_mapping.md  migration_rules.md
docs/planning/: 00_master_spec.md  01_task_index.md  02_execution_protocol.md  03_review_checklist.md  README.md
docs/planning/complete/: 00_scope_and_final_goal.md  01_repository_audit.md  02_complete_development_roadmap.md  03_complete_capability_matrix.md  04_version_and_release_plan.md  05_codex_execution_workflow.md  06_final_completion_checklist.md  README.md
docs/planning/prompts/: 00_initial_check.txt  01_repository_audit.txt  02_migration_matrix.txt  03_related_work.txt  04_target_architecture.txt  05_terminal_tool_skill_agent.txt  06_local_models_native_inference.txt  07_gui_mcp_product.txt  08_benchmark_research.txt  09_final_roadmap.txt  10_implementation_backlog.txt  11_execute_one_batch_template.txt
docs/planning/reports/: 02_migration_matrix.md  README.md
docs/research/: experiment_plan.md  research_prototype.md
examples/00_basic_sql/: README.md  demo.sql
examples/01_explain_plan/: README.md
examples/02_ai_match_mock/: README.md
include/: README.md
include/aidb/: aidb.h  arena.h  binary.h  context.h  error.h  list.h  memory.h  rbt.h  string_utils.h  vector.h
scripts/: build.ps1  clean.ps1  run.ps1  run_demo.ps1  test.ps1
src/ai/client/: README.md
src/ai/core/: README.md
src/ai/operators/: README.md
src/ai/runtime/: README.md
src/cli/: main.c
src/core/: arena.c  binary.c  context.c  error.c  list.c  memory.c  rbt.c  string_utils.c  vector.c
src/dbms/buffer/: README.md
src/dbms/catalog/: README.md
src/dbms/executor/: README.md
src/dbms/explain/: README.md
src/dbms/log/: README.md
src/dbms/optimizer/: README.md
src/dbms/parser/: README.md
src/dbms/planner/: README.md
src/dbms/record/: README.md
src/dbms/storage/: README.md
src/dbms/tx/: README.md
src/json/: README.md
src/net/: README.md
src/platform/: README.md  align.h
src/shell/: README.md
tests/core/: arena_test.c  basic_core_test.c  binary_test.c  context_test.c  error_test.c  list_test.c  memory_test.c  rbt_oom_test.c  rbt_test.c  string_utils_test.c  vector_test.c
tests/manual/: README.md
tests/support/: test_assert.h
tools/: README.md
